# timekeeper

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  API_DOCS.md  CHANGE_LOG.md  CLAUDE.md  CODING_STANDARD.md  CONTINUITY.md  Cargo.toml  README.md  SETUP_GUIDE.md  docker-compose.test-db.yml  docker-compose.test.yml  docker-compose.yml  docker-compose.yml.example  env.example  lcov.info  package-lock.json  plan_issue_148.md  temp_cards_original.txt
.agent/: PLANS.md
backend/: AGENTS.md  Cargo.toml  Dockerfile  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_ANALYSIS_UPDATED.md  cargo_errors.txt  timekeeper.db
backend/.sqlx/: query-a0fb7843be3f40bdb2f0fe10b47a07b11f0961f7a100afd9f8cbf766bbf09a29.json
backend/migrations/: 001_initial_schema.sql  002_insert_default_admin.sql  003_p0_schema_updates.sql  004_fix_admin_password.sql  005_normalize_enum_text.sql  006_normalize_user_roles.sql  007_normalize_attendance_status_again.sql  008_add_system_admin_flag.sql  009_add_mfa_support.sql  010_create_holidays_table.sql  011_convert_total_work_hours_to_double.sql  012_fix_holidays_id_type.sql  013_create_weekly_holidays.sql  014_create_holiday_exceptions.sql  015_update_overtime_planned_hours.sql  016_create_active_access_tokens.sql  017_constrain_holiday_exceptions_to_workdays.sql  018_create_audit_logs.sql  019_create_archived_tables.sql  020_create_consent_logs.sql  021_create_permissions.sql  022_create_subject_requests.sql  023_fix_default_admin_uuid.sql  024_add_email_and_password_resets.sql  025_add_password_history_and_expiration.sql  026_create_active_sessions.sql  027_add_active_sessions_refresh_token_unique.sql  028_add_active_sessions_access_jti.sql  029_add_email_to_archived_users.sql  030_add_account_lockout_columns.sql  031_add_encrypted_pii_columns.sql  032_drop_plaintext_pii_columns.sql  033_backfill_missing_encrypted_pii_not_null.sql  034_revert_plaintext_backfill_in_encrypted_columns.sql  035_create_attendance_corrections.sql  036_archive_attendance_corrections_and_decision_fields.sql  037_add_last_login_failure_at.sql  038_add_active_breaks_partial_index.sql  039_create_departments.sql  040_create_department_managers.sql  (+2 more)
backend/src/: config.rs  docs.rs  lib.rs  main.rs  state.rs
backend/src/application/: clock.rs  dto.rs  http.rs  mod.rs
backend/src/attendance/: mod.rs
backend/src/db/: connection.rs  redis.rs
backend/src/error/: mod.rs
backend/src/handlers/: AGENTS.md  admin.rs  attendance.rs  attendance_correction_requests.rs  attendance_utils.rs  audit_log_repo.rs  auth.rs  auth_repo.rs  config.rs  consents.rs  holiday_exception_repo.rs  holiday_exceptions.rs  holidays.rs  mod.rs  requests.rs  requests_repo.rs  sessions.rs  subject_requests.rs
backend/src/middleware/: AGENTS.md  audit_log.rs  auth.rs  csrf.rs  logging.rs  mod.rs  rate_limit.rs  request_id.rs
backend/src/models/: active_session.rs  attendance.rs  attendance_correction_request.rs  audit_log.rs  break_record.rs  consent_log.rs  department.rs  holiday.rs  holiday_exception.rs  leave_request.rs  mod.rs  overtime_request.rs  password_reset.rs  request.rs  request_status.rs  subject_request.rs  user.rs
backend/src/platform/: app.rs  runtime.rs
backend/src/repositories/: active_session.rs  attendance.rs  attendance_correction_request.rs  attendance_repository.rs  audit_log.rs  auth.rs  break_record.rs  common.rs  consent_log.rs  department.rs  holiday.rs  holiday_exception.rs  holiday_repository.rs  leave_request.rs  leave_request_repository.rs  mod.rs  overtime_request.rs  overtime_request_repository.rs  password_reset.rs  permissions.rs  repository.rs  request.rs  subject_request.rs  transaction.rs  user.rs  user_repository.rs  weekly_holiday.rs
backend/src/services/: audit_log.rs  consent_log.rs  holiday.rs  holiday_exception.rs  lockout_notification_queue.rs  lockout_notification_worker.rs  mod.rs  token_cache.rs
backend/src/types/: id.rs  mod.rs
backend/src/utils/: cookies.rs  csv.rs  email.rs  encryption.rs  jwt.rs  kms.rs  mfa.rs  mod.rs  password.rs  pii.rs  security.rs  time.rs
backend/src/validation/: mod.rs  rules.rs
backend/tests/: AGENTS.md  active_session_repo.rs  admin_attendance_api.rs  admin_audit_logs_api.rs  admin_bulk_import_api.rs  admin_departments_api.rs  admin_export_api.rs  admin_holiday_list.rs  admin_holidays_api.rs  admin_requests_api.rs  admin_subject_requests_api.rs  admin_users_api.rs  attendance_api.rs  attendance_breaks_api.rs  attendance_correction_api.rs  attendance_holiday.rs  attendance_repository.rs  attendance_repository_mock.rs  audit_log_middleware.rs  audit_log_read_export.rs  audit_log_repo.rs  auth_api.rs  auth_flow_api.rs  auth_lockout_redis_integration.rs  config_api.rs  consent_api.rs  consent_log_repo.rs  consent_log_service.rs  csrf_protection_api.rs  db_connection.rs  department_approval_api.rs  docs_api.rs  error_handling_api.rs  holiday_api.rs  holiday_exception_flow.rs  holiday_exception_repository.rs  holiday_exceptions_api.rs  holiday_repository.rs  holiday_service.rs  leave_request_api.rs  (+28 more)
backend/tests/support/: mod.rs
frontend/: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  build_log.txt  config.json  docker-entrypoint.sh  env.js  index.html  index.html.template  nginx-security-headers.conf  nginx.conf  package-lock.json  package.json  tailwind.config.js  tailwind.input.css
frontend/assets/: tailwind.css
frontend/locales/: en.yml  ja.yml
frontend/src/: config.rs  lib.rs  main.rs  router.rs  theme.rs
frontend/src/api/: AGENTS.md  attendance.rs  audit_log.rs  auth.rs  client.rs  mod.rs  requests.rs  subject_requests.rs  test_support.rs  tests.rs  types.rs
frontend/src/components/: cards.rs  common.rs  confirm_dialog.rs  empty_state.rs  error.rs  forms.rs  guard.rs  layout.rs  mod.rs  theme.rs
frontend/src/pages/: admin.rs  admin_export.rs  admin_users.rs  attendance.rs  dashboard.rs  home.rs  login.rs  mfa.rs  mod.rs  requests.rs
frontend/src/state/: attendance.rs  auth.rs  config.rs  locale.rs  mod.rs  theme.rs
frontend/src/test_support/: mod.rs  ssr.rs
frontend/tests/: browser_security_headers.rs
(+307 files in other folders)
