[workspace]
members = [
    "backend",
    "frontend"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["marra"]
license = "MIT"
repository = "https://github.com/marra/timekeeper"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[workspace.dev-dependencies]
ctor = "0.2"
pg-embed = "0.7"
tempfile = "3"
