[package]
name = "timekeeper-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "timekeeper-backend"
path = "src/main.rs"

[[bin]]
name = "token_cleanup"
path = "src/bin/token_cleanup.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart", "tracing"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
http-body = "1.0"

# Database (PostgreSQL)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# Rate limiting
governor = "0.10"
tower_governor = "0.8"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Validation
validator = { version = "0.20", features = ["derive"] }

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# Async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# CSV export
csv = "1.3"

# HTTP client for external calendar import
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Password hashing
# argon2 declared above

# Multi-factor authentication (TOTP)
totp-rs = { version = "5", features = ["otpauth"] }
rand = { version = "0.8", features = ["std"] }
base32 = "0.4"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Async traits
async-trait = "0.1"

[dev-dependencies]
ctor = "0.6.1"
mockall = "0.12"
pg-embed = { version = "0.7.1", default-features = false, features = ["rt_tokio"] }
tempfile = "3"

[features]
default = []
test-utils = []
