[package]
name = "timekeeper-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "timekeeper-frontend"
path = "src/main.rs"

[dependencies]
# Web framework (CSR-only on WASM)
leptos = { version = "0.6", default-features = false, features = ["csr"] }
leptos_meta = { version = "0.6", default-features = false }
leptos_router = { version = "0.6", default-features = false, features = ["csr"] }

# HTTP client (WASM)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
wasm-bindgen-futures = "0.4"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Storage", "Document", "Element", "HtmlElement", "HtmlInputElement", "Event", "MouseEvent", "KeyboardEvent", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement", "RequestCredentials", "MediaQueryList", "MediaQueryListEvent"] }
gloo-timers = { version = "0.2", features = ["futures"] }
base64 = { version = "0.21", default-features = false, features = ["alloc"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Time handling
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
chrono-tz = "0.8"

# UUID
uuid = { version = "1.0", features = ["v4", "serde", "wasm-bindgen"] }

# Logging
console_log = "1.0"
log = "0.4"
console_error_panic_hook = "0.1"
qrcode = { version = "0.13", features = ["svg"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
futures = "0.3"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
http = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Server-side integration (excluded from WASM build)
leptos_axum = { version = "0.6" }

# State management
leptos_reactive = { version = "0.6", default-features = false }

# Styling: handled via CSS toolchain outside Rust
